syntax = "proto3";
package rashop.mailer.v1;
option go_package = "rashop/proto/gen/go/mailer/v1";

import "google/protobuf/timestamp.proto";

enum Status {
  Pending = 0;
  Failed = 1;
  Delivered = 2;
}

enum Tag {
  EmailVerification = 0;
  ResetPassword = 1;
  Login = 2;
  Other = 3;
}

message Mail {
  string id = 1;
  repeated string recipient = 2;
  string sender = 3;
  Tag tag = 4;
  string subject = 5;
  Status status = 6;
  google.protobuf.Timestamp sent_at = 7;
  google.protobuf.Timestamp delivered_at = 8;
}